# siege

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.confluent.yaml  compose.redpanda.yaml  compose.yaml  justfile
.superpowers/brainstorm/34443-1778580258/content/: isometric-map.html  topology-layout.html
.superpowers/brainstorm/34443-1778580258/state/: server-stopped
.superpowers/brainstorm/47431-1777986168/content/: subtlety-levels.html
.superpowers/brainstorm/47431-1777986168/state/: events  server-stopped
.superpowers/brainstorm/61158-1777897757/content/: full-mockup-v2.html  full-mockup.html  map-terrain-v2.html  map-terrain.html
.superpowers/brainstorm/61158-1777897757/state/: server-stopped
.superpowers/brainstorm/88893-1777992538/content/: full-mockup.html
.superpowers/brainstorm/88893-1777992538/state/: server-stopped
.superpowers/brainstorm/97912-1777977099/state/: server-stopped
crates/siege/: Cargo.toml
crates/siege-api/: Cargo.toml
crates/siege-api-client/: Cargo.toml
crates/siege-api-client/src/: chaos.rs  lib.rs  topic.rs
crates/siege-api-spec/: Cargo.toml
crates/siege-api-spec/src/: chaos.rs  error.rs  events.rs  lib.rs  types.rs
crates/siege-api/src/: context.rs  error.rs  main.rs  mapping.rs  seed.rs
crates/siege-api/src/kafka/: backend.rs  mock.rs  mod.rs  rdkafka_backend.rs
crates/siege-api/src/routes/: chaos.rs  mod.rs  seed.rs  topics.rs
crates/siege-api/src/sse/: broadcaster.rs  mod.rs  watcher.rs
crates/siege-chaos/: Cargo.toml
crates/siege-chaos/src/: error.rs  lib.rs  payloads.rs
crates/siege-console/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json
crates/siege-console/assets/: tailwind.css
crates/siege-console/src/: chaos_action.rs  main.rs  routes.rs  short_format.rs  sse.rs  state.rs
crates/siege-console/src/app/features/: mod.rs
crates/siege-console/src/app/features/battlefield/: action_bar.rs  cooldown.rs  mod.rs  page.rs  state.rs
crates/siege-console/src/app/features/battlefield/canvas/: aiming.rs  mod.rs  projectile.rs  scene.rs
crates/siege-console/src/app/features/wheel/: component.rs  mod.rs  page.rs
crates/siege-console/src/components/: layout.rs  mod.rs  topic_detail.rs  topic_list.rs
crates/siege-console/src/components/ui/: chaos_button.rs  icon.rs  mod.rs  modal.rs  pill.rs  seed_button.rs  theme_toggle.rs  toast.rs
crates/siege-console/src/layouts/: default.rs
crates/siege-console/src/pages/topics/: mod.rs  topic_detail.rs  topic_list.rs  topic_pills.rs
crates/siege-core/: Cargo.toml
crates/siege-core/src/: event.rs  events.rs  kafka.rs  lib.rs  types.rs
crates/siege-kafka/: Cargo.toml
crates/siege-kafka/src/: backend.rs  lib.rs  producer.rs
crates/siege-kernel/: Cargo.toml
crates/siege-kernel/src/: kafka.rs  lib.rs
crates/siege-schema-registry/: Cargo.toml
crates/siege-schema-registry/src/: lib.rs
crates/siege-seed/: Cargo.toml
crates/siege-seed-avsc/: Cargo.toml
crates/siege-seed-avsc/src/: lib.rs
crates/siege-seed/src/: avro.rs  faker.rs  hook.rs  lib.rs
crates/siege/src/: chaos.rs  context.rs  error.rs  event.rs  kafka.rs  lib.rs  mock.rs  schema_registry.rs  seed.rs  topic.rs
crates/siege/src/client/: chaos.rs  mod.rs  seed.rs  topics.rs
crates/siege/src/usecase/: topics.rs
docs/superpowers/plans/: 2026-05-10-chaos-scenarios.md  2026-05-12-battlefield.md  2026-05-15-seed-data-schema-registry.md  2026-05-18-seed-progress-events.md
docs/superpowers/specs/: 2026-05-10-chaos-scenarios-design.md  2026-05-12-battlefield-design.md  2026-05-15-seed-data-schema-registry-design.md  2026-05-17-seed-progress-events-design.md
schemas/: dragonstone.avsc  iron-islands.avsc  kings-landing.avsc  the-citadel.avsc  the-wall.avsc  winterfell.avsc
scripts/reset-armory/: init.sh
scripts/reset-armory/resources/: backup.yaml  eventhub.yaml  storage.yaml  volumestorage.yaml
scripts/reset-armory/resources/confluent/: backup.yaml  eventhub.yaml
scripts/reset-armory/resources/redpanda/: backup.yaml
