[package]
name = "siege-api-client"
version.workspace = true
edition.workspace = true

[dependencies]
siege-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
