[package]
name = "siege-api"
version.workspace = true
edition.workspace = true

[dependencies]
siege-core.workspace = true
siege-api-spec.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
rdkafka.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
