[package]
name = "siege-seed"
version.workspace = true
edition.workspace = true

[dependencies]
siege.workspace = true
siege-seed-avsc.workspace = true
apache-avro.workspace = true
fake.workspace = true
rand.workspace = true
serde_json.workspace = true
futures.workspace = true
uuid.workspace = true
tokio = { workspace = true, features = ["process"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
